gccida/c0/make_decl_rtl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1288:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *identifier; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1289:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1290:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1297:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+24h] [rbp-9Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1345:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)decla->real_cst.real_cst.r[2], 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1345:18: error: expected expression
( machine_mode)( unsigned __int8)decla->real_cst.real_cst.r[2], 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1386:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( decla->common.type->block.abstract_origin)) >> 1)) ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1477:42: error: use of undeclared identifier 'machine_mode'
decla->decl.rtl = gen_rtx_fmt_i0( REG, ( machine_mode)( unsigned __int8)decla->real_cst.real_cst.r[2], reg_number); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1477:57: error: expected expression
decla->decl.rtl = gen_rtx_fmt_i0( REG, ( machine_mode)( unsigned __int8)decla->real_cst.real_cst.r[2], reg_number); 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1527:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[( unsigned __int8)decla->real_cst.real_cst.r[2]] == MODE_COMPLEX_INT; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/varasm.c:1530:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = mode_class_0[( unsigned __int8)decla->real_cst.real_cst.r[2]] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_decl_rtl/src/obj/varasm.o] Error 1
